Increased page header padding to fix overlap with navbar

--- a/shared/css/services.css
+++ b/shared/css/services.css
@@ -9,7 +9,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    padding-top: 120px;
+    padding-top: 150px;
     text-align: center;
 }
 
